# DeVries

./: README.md  pyproject.toml
curves/: curves.py
