[project]
name = "devries"
version = "0.1.0"
description = "scripts based on A First Course in Computational Physics by Paul L. DeVries"
authors = [
    {name = "Oliver Rudolph",email = "oliver@irudolph.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
